fixed layout bug with podcast section

--- a/src/sass/components/_introbox.scss
+++ b/src/sass/components/_introbox.scss
@@ -40,6 +40,7 @@
     .intro-text{
         // width: 50%;
         color: $background-color;
+        font-weight: normal;
         .intro-header{
             line-height: 1.5;
             margin-bottom: 10px;
